--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
   "compilerOptions": {
-    "target": "es2019",
+    "target": "ES6",
     "module": "esnext",
     "lib": [
-      "dom",
+      "DOM",
       "esnext"
     ],
     "outDir": "./dist",
